--- a/index.html
+++ b/index.html
@@ -8,18 +8,30 @@
   
   <title>Frontend Mentor | Insure landing page</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  <link rel="stylesheet" href="css/styles.css">
   <style>
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
 <body>
+<header>
+  
+  <h1 id="logo">Insure</h1>
+  <nav>
+    <ul class="nav_links">
+      <li><a href="#">How we work</a></li>
+      <li><a href="#"> Blog</a></li>
+      <li><a href="#"> Account</a></li>
+    </ul>
+  </nav>
+  <a href="#"><button class="cta">View plans</button></a>
 
-  How we work
-  Blog
-  Account
-  View plans
+</header>
+  
+ 
+ 
+ 
 
   Humanizing your insurance.
 
