--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
 </head>
 <body>
 <header>
-  
   <h1 id="logo">Insure</h1>
+  <div class="toggle-btn" onclick="toggleButton(this)">
+    <div class="bar1"></div>
+    <div class="bar2"></div>
+    <div class="bar3"></div></div>
   <nav>
     <ul class="nav_links">
       <li><a href="#">How we work</a></li>
@@ -93,5 +96,6 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
   </div>
+  <script src="js/scripts.js"></script>
 </body>
 </html>
