--- a/index.html
+++ b/index.html
@@ -15,22 +15,24 @@
   </style>
 </head>
 <body>
-<header>
+  <nav class="navbar">
   <h1 id="logo">Insure</h1>
   <div class="toggle-btn" onclick="toggleButton(this)">
     <div class="bar1"></div>
     <div class="bar2"></div>
-    <div class="bar3"></div></div>
-  <nav>
-    <ul class="nav_links">
+    <div class="bar3"></div>
+  </div>
+  <div class="navbar_links">
+    <ul>
       <li><a href="#">How we work</a></li>
       <li><a href="#"> Blog</a></li>
       <li><a href="#"> Account</a></li>
+      <li ><a href="#" id="cta">View plans</a></li>
     </ul>
+  </div>
   </nav>
-  <a href="#"><button class="cta">View plans</button></a>
+  
 
-</header>
   
  
  
