finish mobile navigation

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | Insure landing page</title>
-
+ 
   <link rel="stylesheet" href="css/styles.css">
+
   <style>
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
@@ -16,7 +17,7 @@
 </head>
 <body>
   <nav class="navbar">
-  <h1 id="logo">Insure</h1>
+  <h1 class="logo">Insure</h1>
   <div class="toggle-btn" onclick="toggleButton(this)">
     <div class="bar1"></div>
     <div class="bar2"></div>
