--- a/index.html
+++ b/index.html
@@ -16,22 +16,54 @@
   </style>
 </head>
 <body>
-  <nav class="navbar">
-  <h1 class="logo">Insure</h1>
-  <div class="toggle-btn" onclick="toggleButton(this)">
-    <div class="bar1"></div>
-    <div class="bar2"></div>
-    <div class="bar3"></div>
+  <header>
+    <nav class="navbar">
+      <h1 class="logo">Insure</h1>
+      <div class="toggle-btn" onclick="toggleButton(this)">
+        <div class="bar1"></div>
+        <div class="bar2"></div>
+        <div class="bar3"></div>
+      </div>
+      <div class="navbar_links">
+        <ul>
+          <li><a href="#">How we work</a></li>
+          <li><a href="#"> Blog</a></li>
+          <li><a href="#"> Account</a></li>
+          <li ><a href="#" id="cta">View plans</a></li>
+        </ul>
+      </div>
+      </nav>
+  </header>
+ 
+<section>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-6">
+        <h1>Humanizing your insurance.</h1>
+        <p>Get your life insurance coverage easier and faster. We blend our expertise 
+          and technology to help you find the plan that’s right for you. Ensure you 
+          and your loved ones are protected.</p>
+          <button class="cta">View plans</button>
+      </div>
+      <div class="col-6">
+        <img src="images/image-intro-desktop.jpg" alt="">
+      </div>
+    </div>
   </div>
-  <div class="navbar_links">
-    <ul>
-      <li><a href="#">How we work</a></li>
-      <li><a href="#"> Blog</a></li>
-      <li><a href="#"> Account</a></li>
-      <li ><a href="#" id="cta">View plans</a></li>
-    </ul>
+  
+</section>
+
+<!-- services -->
+<section>
+  <div class="container">
+    <div class="row">
+      <div class="col-4"></div>
+      <div class="col-4"></div>
+      <div class="col-4"></div>
+    </div>
   </div>
-  </nav>
+</section>
   
 
   
@@ -39,13 +71,11 @@
  
  
 
-  Humanizing your insurance.
+  
 
-  Get your life insurance coverage easier and faster. We blend our expertise 
-  and technology to help you find the plan that’s right for you. Ensure you 
-  and your loved ones are protected.
+  
 
-  View plans
+  
 
   We’re different
 
