add services section

--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
 
   <div class="container">
     <div class="row">
+    
       <div class="col-6">
+        <hr>
         <h1>Humanizing your insurance.</h1>
         <p>Get your life insurance coverage easier and faster. We blend our expertise 
           and technology to help you find the plan that’s right for you. Ensure you 
@@ -58,9 +60,26 @@
 <section>
   <div class="container">
     <div class="row">
-      <div class="col-4"></div>
-      <div class="col-4"></div>
-      <div class="col-4"></div>
+      <hr>
+      <h1>We’re different</h1>
+      <div class="col-4">
+        <img src="images/icon-snappy-process.svg" alt="">
+        <h1>Snappy Process</h1>
+        <p>Our application process can be completed in minutes, not hours. Don’t get 
+          stuck filling in tedious forms.</p>
+      </div>
+      <div class="col-4">
+        <img src="images/icon-affordable-prices.svg" alt="">
+        <h1> Affordable Prices</h1>
+        <p> We don’t want you worrying about high monthly costs. Our prices may be low, 
+          but we still offer the best coverage possible.</p>
+      </div>
+      <div class="col-4">
+        <img src="images/icon-people-first.svg" alt="">
+        <h1>People First</h1>
+        <p>Our plans aren’t full of conditions and clauses to prevent payouts. We make 
+          sure you’re covered when you need it.</p>
+      </div>
     </div>
   </div>
 </section>
@@ -77,22 +96,19 @@
 
   
 
-  We’re different
+  
 
-  Snappy Process
+  
 
-  Our application process can be completed in minutes, not hours. Don’t get 
-  stuck filling in tedious forms.
+  
 
-  Affordable Prices
+ 
 
-  We don’t want you worrying about high monthly costs. Our prices may be low, 
-  but we still offer the best coverage possible.
+ 
 
-  People First
+  
 
-  Our plans aren’t full of conditions and clauses to prevent payouts. We make 
-  sure you’re covered when you need it.
+  
 
   Find out more about how we work
 
