--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
  
 <section>
 
-  <div class="container">
+  <div class="container introduction">
     <div class="row">
     
       <div class="col-6">
@@ -83,62 +83,99 @@
     </div>
   </div>
 </section>
+
+<!-- cta section -->
+<section>
+  <div class="container">
+    <div class="row">
+      <div class="col-9">
+        <h1>Find out more about how we work</h1>
+      </div>
+      <div class="col-3">
+        <button class="cta">How we work</button>
+      </div>
+    </div>
+  </div>
+</section>
+
+<footer>
+  <div class="container">
+    <div class="row">
+      <div class="col-9">
+        <h1>insure</h1>
+      </div>
+      <div class="col-3 icons">
+        <a href="#"><img src="images/icon-facebook.svg" alt="icon-facebook"></a>
+        <a href="#"><img src="images/icon-twitter.svg" alt="icon-twitter"></a>
+        <a href="#"> <img src="images/icon-pinterest.svg" alt="icon-pinterest"></a>
+        <a href="#"><img src="images/icon-instagram.svg" alt="icon-instagram"></a>
+      </div>
+    </div>
+    
+    <div class="row">
+      <hr>
+    </div>
+  </div>
+  
+  <div class="container">
+    <div class="row">
+      <div class="col-3">
+        <ul>
+          <li> Our company</li>
+          <li>How we work</li>
+          <li>Why Insure?</li>
+          <li>View plans</li>
+          <li>Reviews</li>
+        </ul>
+      </div>
+      <div class="col-3">
+        <ul>
+          <li>Help me</li>
+          <li>FAQ</li>
+          <li>Terms of use</li>
+          <li>Privacy policy</li>
+          <li>Cookies</li>
+        </ul>
+      </div>
+      <div class="col-3">
+        <ul>
+          <li>Contact</li>
+          <li>Sales</li>
+          <li>Support</li>
+          <li>Live chat</li>
+        </ul>
+      </div>
+      <div class="col-3">
+        <ul>
+          <li>Others</li>
+          <li>Careers</li>
+          <li>Press</li>
+          <li>Licenses</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</footer>
+  
+
+  
+
+  
+  
+  
+  
+
+  
+
+  
+  
+  
+
   
 
   
  
- 
- 
-
   
-
-  
-
-  
-
-  
-
-  
-
-  
-
- 
-
- 
-
-  
-
-  
-
-  Find out more about how we work
-
-  How we work
-
-  Our company
-
-  How we work
-  Why Insure?
-  View plans
-  Reviews
-
-  Help me
-
-  FAQ
-  Terms of use
-  Privacy policy
-  Cookies
-
-  Contact
-
-  Sales
-  Support
-  Live chat
-
-  Others
-
-  Careers
-  Press
-  Licenses
 
   
   <div class="attribution">
