--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <button class="cta">View plans</button>
       </div>
       <div class="col-6">
-        <img src="images/image-intro-desktop.jpg" alt="">
+        <img src="images/image-intro-desktop.jpg" alt="image-intro-desktop">
       </div>
     </div>
   </div>
@@ -58,24 +58,24 @@
 
 <!-- services -->
 <section>
-  <div class="container">
+  <div class="container services">
     <div class="row">
       <hr>
-      <h1>We’re different</h1>
+      <h1 class="top">We’re different</h1>
       <div class="col-4">
-        <img src="images/icon-snappy-process.svg" alt="">
+        <img src="images/icon-snappy-process.svg" alt="icon-snappy-process">
         <h1>Snappy Process</h1>
         <p>Our application process can be completed in minutes, not hours. Don’t get 
           stuck filling in tedious forms.</p>
       </div>
       <div class="col-4">
-        <img src="images/icon-affordable-prices.svg" alt="">
+        <img src="images/icon-affordable-prices.svg" alt="icon-affordable-prices">
         <h1> Affordable Prices</h1>
         <p> We don’t want you worrying about high monthly costs. Our prices may be low, 
           but we still offer the best coverage possible.</p>
       </div>
       <div class="col-4">
-        <img src="images/icon-people-first.svg" alt="">
+        <img src="images/icon-people-first.svg" alt="icon-people-first">
         <h1>People First</h1>
         <p>Our plans aren’t full of conditions and clauses to prevent payouts. We make 
           sure you’re covered when you need it.</p>
@@ -86,10 +86,10 @@
 
 <!-- cta section -->
 <section>
-  <div class="container">
+  <div class="container call-to-action">
     <div class="row">
       <div class="col-9">
-        <h1>Find out more about how we work</h1>
+        <h1>Find out more <br> about how we work</h1>
       </div>
       <div class="col-3">
         <button class="cta">How we work</button>
