--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     </div>
   </div>
   
-  <div class="container">
+  <div class="container footer-list">
     <div class="row">
       <div class="col-3">
         <ul>
