--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <header>
     <nav class="navbar">
-      <h1 class="logo">Insure</h1>
+      <p class="logo">Insure</p>
       <div class="toggle-btn" onclick="toggleButton(this)">
         <div class="bar1"></div>
         <div class="bar2"></div>
@@ -33,13 +33,13 @@
   </header>
  
   <section class="introduction">
-    <div class="row ">
+    <div class="row">
       <div class="col-4 mobile-img">
          <img src="images/image-intro-mobile.jpg" alt="image-intro-mobile" width="100%">
         </div>
       <div class="col-6">
         <hr>
-        <h1>Humanizing your insurance.</h1>
+        <h1 class="heading-top">Humanizing <br> your insurance.</h1>
         <p>Get your life insurance coverage easier and faster. We blend our expertise 
           and technology to help you find the plan that’s right for you. Ensure you 
           and your loved ones are protected.</p>
