finish editing introduction, sevices and how we work  mobile views

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
  <div></div>
   <section class="introduction">
     <div class="row">
-      <div class="col-4 mobile-img">
+      <div class="col-4 mobile">
          <img src="images/image-intro-mobile.jpg" alt="image-intro-mobile" width="100%">
         </div>
       <div class="col-6 top-content">
@@ -82,7 +82,7 @@
 
 <!-- cta section -->
 
-  <section class="section call-action">
+  <section class="call-action">
     <div class="row call-to-action">
       <div class="col-9">
         <h1 class="find-out">Find out more <br> about how we work</h1>
