finish editing mobile views

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
 
 <!-- services -->
-  <section class="section services">
+  <section class=" services">
     <div class="row">
       <hr class="hr-mid">
       <h1 class="heading-mid">We’re different</h1>
@@ -84,23 +84,23 @@
 
   <section class="call-action">
     <div class="row call-to-action">
-      <div class="col-9">
+      <div class="col-8">
         <h1 class="find-out">Find out more <br> about how we work</h1>
       </div>
-      <div class="col-3">
+      <div class="col-4">
         <button class="cta">How we work</button>
       </div>
     </div>
   </section>
 
 
-<footer class="section" >
+<footer >
   <div class="icon-section">
     <div class="row">
-      <div class="col-9">
+      <div class="col-8">
         <h1 class="header-icon" >insure</h1>
       </div>
-      <div class="col-3 icons">
+      <div class="col-4 icons">
         <ul>
 
           <li><a href="#"><img src="images/icon-facebook.svg" alt="icon-facebook"></a></li>
@@ -115,7 +115,6 @@
     
   </div>
   
-
   <div class="footer-list">
     <div class="row">
       <hr>
