--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
     <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">
-        Frontend Mentor</a>. Coded by <a href="#">Allan Nandala</a>.
+        Frontend Mentor</a>. Coded by <a href="https://github.com/Allanlcomander">Allan Nandala</a>.
     </div>
     <script src="js/scripts.js"></script>
   </body>
